final changes to release 1.20.4
Took 1 hour 5 minutes